# oj-eval-aider-019-20260708191604

./: CMakeLists.txt  README.md  main.cpp  simulator.hpp  src.hpp
submit_acmoj/: acmoj_client.py
